# torchvision2trt-samples

./: .gitignore  Dockerfile  Dockerfile.x86  README.jp.md  README.md  WORKSPACE.torch_tensorrt_l4t_34_1_1  benchmark_util.py  cudnn_csv_patch_jp4_4dp.txt  install_torch_tensorrt.ipynb  plugin_test.ipynb  plugin_test2.ipynb  torchvision_normal.ipynb  torchvision_onnx.ipynb  torchvision_torch2trt.ipynb  torchvision_torch_tensorrt.ipynb  torchvision_trtapi.ipynb  trt_analyzer.py
plugin/: CMakeLists.txt  CopyPlugin.cpp  CuDnnPooling.cpp  CuDnnPooling.h  CudaPooling.cpp  CudaPooling.h  Pooling.h  PoolingAlgo.cu  PoolingPlugin.cpp  error_util.h  gen_proto.sh  trt_plugin.pb.cpp  trt_plugin.pb.h  trt_plugin.proto  trt_plugin_pb2.py
scripts/: docker_base.sh  docker_build.sh  docker_build_x86.sh  docker_commit.sh  docker_run.sh  docker_run_debug.sh  docker_run_named.sh  docker_run_x86.sh
